2001-06-07  Christian Rose  <menthos@menthos.com>

	* applets/gen_util/mailcheck.soundlist: Added Swedish
	translation.

2001-06-05  Christian Rose  <menthos@menthos.com>

	* applet-dirs/Clocks.directory, applet-dirs/Monitors.directory,
	applet-dirs/Multimedia.directory, applet-dirs/Network.directory,
	applet-dirs/Utility.directory, gen_util/mailcheck_applet.desktop,
	gen_util/printer.desktop, tasklist/tasklist_applet.desktop:
	Modified Swedish translation.

2001-05-30  Havoc Pennington  <hp@redhat.com>

	* gen_util/clock.c (make_clock_applet): remove "to selection" from
	"Copy time to selection" and "Copy date to selection". Make them
	copy to clipboard. Delete "Copy timestamp to selection" item.

	When porting to GTK 2, we should maybe make the label selectable, 
	and then have a simple Copy menu item. Then you can copy whatever
	part you want, and also paste with middle mouse.

	(make_clock_applet): reword the "someone should be shot" warning,
	it occasionally appears and disturbs users

	(create_computer_clock_widget): change shadow type to NONE
	
2001-05-27  Stanislav Brabec  <utx@penguin.cz>

	* applet-dirs/Network.directory: Changed incorrrect English
	Comment "Network menu" to "Network applets".

Wed Apr 25 21:17:51 2001  George Lebl <jirka@5z.com>

	* gen_util/popcheck.[ch], gen_util/remote-helper.[ch],
	  gen_util/mailcheck.c:  apply patch from Rob Funk
	  (rfunk@funknet.net) to add support for multiple IMAP mailboxes

2001-04-02  Fatih Demir <kabalak@gtranslator.org>

	* gen_util/mailcheck.soundlist: Small update of the Turkish
		entry.

Tue Mar 06 16:07:41 2001  George Lebl <jirka@5z.com>

	* gen_util/popcheck.[ch], gen_util/mailcheck.[ch],
	  gen_util/remote-helper.[ch]:  Instead of doing network stuff
	  in the main proccess which could (and would) frequently hang
	  the panel (which is mucho bad), fork off a process and do things
	  there, Fixes a couple of bugs on bugzilla which I'm too lazy to
	  look for now.
