@@ -1,3 +1,8 @@
+2001-06-20  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* applets/gen_util/clock.c: Remove trailing comma in enum.
+	From Dan McNichol <mcnichol@austin.ibm.com>
+	
 2001-06-07  Christian Rose  <menthos@menthos.com>
 
 	* applets/gen_util/mailcheck.soundlist: Added Swedish
